--- a/src/components/slider/Slider.scss
+++ b/src/components/slider/Slider.scss
@@ -14,7 +14,7 @@
 
     @include mobile {
         margin-top: calc(#{$header-mobile-height} * -1);
-        margin-bottom: unset
+        margin-bottom: unset;
     }
 
     &__item {
@@ -72,6 +72,7 @@
                 @include mobile {
                     font-size: 2rem;
                     line-height: 2.5rem;
+                    margin-top: 1rem;
                 }
             }
 
@@ -141,6 +142,11 @@
                     height: 100%;
                     position: relative;
                 }
+
+                @include mobile {
+                    height: 55vh;
+                    position: relative;
+                }
             }
         }
 
@@ -161,7 +167,7 @@
         }
 
         @include mobile {
-            bottom: 20px;
+            bottom: calc(8vh + $header-mobile-height);
         }
 
 
