--- a/src/components/slider/Slider.scss
+++ b/src/components/slider/Slider.scss
@@ -86,6 +86,12 @@
                 @include mobile {
                     font-size: 1rem;
                     line-height: 1.5rem;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    display: -webkit-box;
+                    -webkit-line-clamp: 3;
+                    line-clamp: 3; 
+                    -webkit-box-orient: vertical;
                 }
             }
 
