--- a/src/App.scss
+++ b/src/App.scss
@@ -74,6 +74,21 @@ a {
   }
 }
 
+.grid__3col {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  margin-bottom: 3rem;
+
+  @include tablet {
+      grid-template-columns: repeat(2, 1fr);
+  }
+
+  @include mobile {
+      grid-template-columns: repeat(1, 1fr);
+  }
+}
+
 .banner {
   width: 100%;
   max-width: 1620px;
