--- a/src/components/button/Button.scss
+++ b/src/components/button/Button.scss
@@ -4,13 +4,13 @@
     border: 0;
     outline: 0;
     color: $btn-main-color;
-    font-size: 1.5rem;
-    font-weight: 600;
-    text-transform: uppercase;
+    font-size: 1.2rem;
+    font-weight: 400;
     cursor: pointer;
     overflow: hidden;
     position: relative;
-    background: linear-gradient(90deg, #2a7aac, $btn-main-bg);
+    background: $btn-main-bg;
+    border-radius: 3px;
 
     @include mobile {
         font-size: 1rem;
@@ -28,7 +28,7 @@
 
     &__icon {
         @include flex(center, center);
-        font-size: 1rem;
+        font-size: 1.2rem;
         position: absolute;
         left: 0;
         top: 0;
