--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,7 +1,7 @@
 $main-bg: #fff;
 $main-color: #143A51;
 
-$txt-main-color: #1D1D1D;
+$txt-main-color: #1d1d1d;
 $txt-second-color: #FF5D68;
 $txt-white: #fff;
 
@@ -17,11 +17,12 @@ $box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 
 $colors: (
     "blue": #4267b2,
-    "orange": #fbb96b,
+    "orange": #FFA500,
     "pink": #fe7e73,
-    "white": #fff,
+    "white": #FFFAFA,
     "black": #000,
     "main": $main-color,
+    "red": #ff0000,
 );
 
 $mobile-width: 600px;
