--- a/src/App.scss
+++ b/src/App.scss
@@ -14,6 +14,10 @@
 
 html {
   font-size: 13px;
+
+  @include mobile {
+    font-size: 11px;
+  }
 }
 
 body {
@@ -102,4 +106,22 @@ a {
   @include mobile {
       padding: 0 10px;
   }
+}
+
+@each $color, $val in $colors {
+  .bg-#{$color} {
+    background-color: $val;
+  }
+}
+
+.separate {
+  margin: 0 20%;
+  height: 1px;
+  background-color: $main-color;
+  opacity: 0.26;
+  margin-bottom: 80px;
+
+    @include mobile {
+        margin-bottom: 40px;
+    }
 }
