--- a/src/components/product-detail/ProductDetail.scss
+++ b/src/components/product-detail/ProductDetail.scss
@@ -139,9 +139,15 @@
                     @include flex(center, center);
                     width: 40px;
                     height: 40px;
-                    border: 1px solid rgba(29, 29, 29, 0.4);
+                    border: 1px solid rgba(29, 29, 29, 0.1);
                     font-size: 1.5rem;
                     cursor: pointer;
+
+                    @include mobile {
+                        width: 30px;
+                        height: 30px;
+                        font-size: 1.25rem;
+                    }
 
                     & > i:hover {
                         color: $txt-second-color;
@@ -153,8 +159,14 @@
                     height: 40px;
                     width: 60px;
                     font-size: 1.5rem;
-                    border-top: 1px solid rgba(29, 29, 29, 0.4);
-                    border-bottom: 1px solid rgba(29, 29, 29, 0.4);
+                    border-top: 1px solid rgba(29, 29, 29, 0.1);
+                    border-bottom: 1px solid rgba(29, 29, 29, 0.1);
+
+                    @include mobile {
+                        height: 30px;
+                        width: 40px;
+                        font-size: 1.25rem;
+                    }
                 }
             }
 
