--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -87,6 +87,20 @@
             font-size: 2.25rem;
             &__item {
                 @include flex(center, center);
+                position: relative;
+
+                &__count {
+                    @include flex(center, center);
+                    position: absolute;
+                    background: red;
+                    width: 2rem;
+                    height: 2rem;
+                    color: #fff;
+                    border-radius: 50%;
+                    font-size: 1rem;
+                    top: -0.8rem;
+                    right: -1rem;
+                }
             }
 
             @include mobile {
@@ -95,6 +109,7 @@
         }
 
         &__left {
+            z-index: 99;
             &__item {
                 position: relative;
 
