--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -37,6 +37,10 @@
         }
     }
 
+    &.putup {
+        z-index: 100;
+    }
+
     &__menu {
         @include flex(center, space-between);
         height: 100%;
@@ -100,6 +104,68 @@
                     font-size: 1rem;
                     top: -0.8rem;
                     right: -1rem;
+                }
+
+                &:hover{
+                    .user {
+                        display: block;
+                    }
+                }
+
+                .user {
+                    display: none;
+                    position: absolute;
+                    background: $main-color;
+                    right: -1rem;
+                    top: 3rem;
+                    padding: 1rem;
+                    font-size: 1.4rem;
+                    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.06), 0 1px 2px rgba(0, 0, 0, 0.12);
+                    border-radius: 2px;
+
+                    &::after {
+                        content: '';
+                        position: absolute;
+                        background: transparent;
+                        right: 1rem;
+                        top: -0.6rem;
+                        width: 0;
+                        height: 0;
+                        border-left: 1rem solid transparent;
+                        border-right: 1rem solid transparent;
+                        border-bottom: 0.6rem solid $main-color;
+                    }
+
+                    &__email {
+                        padding: 0.2rem 0;
+                        position: relative;
+                        cursor: default;
+                        color: $txt-white;
+
+                        &::after {
+                            content: '';
+                            position: absolute;
+                            bottom: 0;
+                            left: 0;
+                            width: 100%;
+                            height: 1px;
+                            background: rgba(0, 0, 0, 0.1);
+                        }
+                    }
+
+                    &__logout {
+                        
+                        margin-top: 0.8rem;
+                        color: $txt-white;
+
+                        &:hover {
+                            color: $txt-second-color;
+                        }
+
+                        i {
+                            margin-left: 0.5rem;
+                        }
+                    }
                 }
             }
 
