--- a/src/components/cart-item/CartItem.scss
+++ b/src/components/cart-item/CartItem.scss
@@ -56,6 +56,23 @@
             & > * {
                 margin-bottom: 20px;
             }
+
+            .checkout {
+                margin-top: 40px;
+                position: relative;
+
+                &::after {
+                    content: '';
+                    position: absolute;
+                    width: 50%;
+                    height: 1px;
+                    background: #000;
+                    opacity: 0.26;
+                    top: -20px;
+                    left: 0;
+                    transform: translateX(50%);
+                }
+            }
         }
     }
 
