--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,7 +1,7 @@
 @use '../../sass/' as *;
 
 .header {
-    background-color: $main-bg;
+    background-color: transparent;
     position: fixed;
     top: 0;
     left: 0;
@@ -13,10 +13,12 @@
     @include tablet {
         height: $header-tablet-height;
         box-shadow: $box-shadow;
+        background-color: $main-bg;
     }
 
     @include mobile {
         height: $header-mobile-height;
+        background-color: $main-bg;
     }
 
     .container {
@@ -24,6 +26,7 @@
     }
 
     &.shrink {
+        background-color: $main-bg;
         height: $header-shrink-height;
         box-shadow: $box-shadow;
         z-index: 100;
