--- a/src/components/slider/Slider.scss
+++ b/src/components/slider/Slider.scss
@@ -19,10 +19,10 @@
 
     &__item {
         @include flex(center, space-between);
+        position: relative;
         opacity: 0;
         visibility: hidden;
         pointer-events: none;
-        position: absolute;
         inset: 0;
 
         @include tablet {
@@ -124,7 +124,7 @@
             flex-grow: 1;
             position: relative;
             height: 100%;
-            z-index: 99;
+            z-index: 999;
             pointer-events: none;
 
             @include tablet {
@@ -137,11 +137,11 @@
 
             img {
                 height: 100vh;
-                position: absolute;
+                //position: absolute;
                 bottom: 0;
                 right: 0;
-                transform: scale(0) rotate(65deg);
-                transition: transform 0.5s
+                transform: scale(0);
+                transition: transform 0.8s
                     cubic-bezier(0.175, 0.885, 0.32, 1.275);
 
                 @include tablet {
@@ -158,45 +158,6 @@
 
         &.active &__image > img {
             transform: scale(1) rotate(0);
-        }
-    }
-
-    &__control {
-        @include flex(center, center);
-        position: absolute;
-        bottom: 40px;
-        left: 50%;
-        transform: translateX(-50%);
-
-        @include tablet {
-            bottom: 20px;
-        }
-
-        @include mobile {
-            bottom: calc(8vh + $header-mobile-height);
-        }
-
-
-        &__item ~ &__item {
-            margin-left: 10px;
-        }
-
-        &__item {
-            @include flex(center, center);
-            font-size: 2rem;
-            cursor: pointer;
-
-            @include mobile {
-                font-size: 1.4rem;
-            }
-
-            &:hover {
-                color: $main-color;
-            }
-
-            .index {
-                font-size: 1.5rem;
-            }
         }
     }
 }
