--- a/src/pages/authenticate-page/auth.scss
+++ b/src/pages/authenticate-page/auth.scss
@@ -15,6 +15,14 @@
         padding: 2rem;
         top: $header-height;
 
+        @include tablet {
+            width: 60%;
+        }
+
+        @include mobile {
+            width: 96%;
+        }
+
         button {
             margin-top: 2rem;
         }
